--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'com.joker'
-version '1.0.0-beta03'
+version '1.0.1'
 
 sourceCompatibility = JavaVersion.VERSION_11
 targetCompatibility = JavaVersion.VERSION_11
@@ -15,7 +15,7 @@ repositories {
 
 intellij {
     plugins = ['com.intellij.java']
-    version = '2021.1'
+    version = '2021.2.1'
     type = 'IU'
     downloadSources = true
     updateSinceUntilBuild = false
