--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
-    id 'org.jetbrains.intellij' version '1.4.0'
+    id "org.jetbrains.intellij" version "1.5.2"
     id 'java'
 }
 
 group 'com.joker'
-version '1.0.3'
+version '1.0.4'
 
 tasks.withType(JavaCompile) {
     sourceCompatibility = JavaVersion.VERSION_11
@@ -14,12 +14,13 @@ tasks.withType(JavaCompile) {
 }
 
 repositories {
+    maven { url 'https://plugins.gradle.org/m2/' }
     mavenCentral()
 }
 
 intellij {
     plugins = ['com.intellij.java']
-    version = '2021.3'
+    version = '2022.1'
     type = 'IU'
     downloadSources = true
     updateSinceUntilBuild = false
