--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,8 @@
+pluginManagement {
+    repositories {
+//        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
+        gradlePluginPortal()
+    }
+}
 rootProject.name = 'serial_number'
-
