--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -2,8 +2,6 @@
     <id>com.joker.serial_number</id>
     <name>Serial Number</name>
     <vendor email="1908105978@qq.com" url="https://github.com/Joker-Q4/serial_number">Joker</vendor>
-    <version>1.0.6</version>
-    <idea-version since-build="201" until-build="223.*" />
 
     <description><![CDATA[
 
@@ -21,6 +19,10 @@
 
     <change-notes><![CDATA[
 
+        <h3>v1.0.7</h3>
+        <ul>
+            <li>Optimize version compatibility</li>
+        </ul>
         <h3>v1.0.6</h3>
         <ul>
             <li>Optimize version compatibility</li>
@@ -87,18 +89,14 @@
             <keyboard-shortcut keymap="Mac OS X 10.5+" first-keystroke="ctrl shift n"/>
             <keyboard-shortcut keymap="macOS System Shortcuts" first-keystroke="ctrl shift j"/>
             <keyboard-shortcut keymap="NetBeans 6.5" first-keystroke="ctrl shift n"/>
-            <keyboard-shortcut keymap="QtCreator" first-keystroke="ctrl shift n"/>
             <keyboard-shortcut keymap="QtCreator (Mac OS X)" first-keystroke="ctrl shift n"/>
-            <keyboard-shortcut keymap="ReSharper" first-keystroke="ctrl shift n"/>
             <keyboard-shortcut keymap="ReSharper OSX" first-keystroke="ctrl shift n"/>
             <keyboard-shortcut keymap="Sublime Text" first-keystroke="ctrl shift n"/>
             <keyboard-shortcut keymap="Sublime Text (Mac OS X)" first-keystroke="ctrl shift n"/>
-            <keyboard-shortcut keymap="Visual Assist" first-keystroke="ctrl shift n"/>
             <keyboard-shortcut keymap="Visual Assist OSX" first-keystroke="ctrl shift n"/>
             <keyboard-shortcut keymap="Visual Studio" first-keystroke="ctrl shift n"/>
             <keyboard-shortcut keymap="Visual Studio for Mac" first-keystroke="ctrl shift n"/>
             <keyboard-shortcut keymap="Visual Studio OSX" first-keystroke="ctrl shift n"/>
-            <keyboard-shortcut keymap="VSCode" first-keystroke="ctrl shift n"/>
             <keyboard-shortcut keymap="VSCode OSX" first-keystroke="ctrl shift n"/>
             <keyboard-shortcut keymap="Xcode" first-keystroke="ctrl shift n"/>
         </action>
