--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
 plugins {
-    id "org.jetbrains.intellij" version "1.13.2"
+    id "org.jetbrains.intellij" version "1.15.0"
     id "java"
 }
 
-def v = "1.0.7"
+def v = "1.0.8"
 
 group "com.joker"
 version v
 
 tasks.withType(JavaCompile).configureEach {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
     options.encoding = "UTF-8"
     options.warnings = false
 }
@@ -18,7 +18,7 @@ tasks.withType(JavaCompile).configureEach {
 patchPluginXml {
     version = v
     sinceBuild = "201"
-    untilBuild = "232.*"
+    untilBuild = "233.*"
 }
 
 repositories {
@@ -33,8 +33,8 @@ repositories {
 // Configure Gradle IntelliJ Plugin
 // Read more: https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html
 intellij {
-    plugins = ["com.intellij.java"]
-    version = "2022.2.4"
+    plugins = ["com.intellij.java", "com.intellij.database"]
+    version = "2023.3.2"
     type = "IU"
     downloadSources = true
     updateSinceUntilBuild = false
