--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -19,6 +19,10 @@
 
     <change-notes><![CDATA[
 
+        <h3>v1.0.8</h3>
+        <ul>
+            <li>Optimize version compatibility</li>
+        </ul>
         <h3>v1.0.7</h3>
         <ul>
             <li>Optimize version compatibility</li>
@@ -77,28 +81,17 @@
 
     <actions>
         <action id="GenerateSerialNumber" class="com.joker.plugin.action.GenerateSerialNumber" text="Serial Number" description="Generate serial number">
-            <add-to-group group-id="GenerateGroup" anchor="first"/>
+            <add-to-group group-id="CodeMenu" anchor="before" relative-to-action="CodeCompletionGroup"/>
             <keyboard-shortcut keymap="$default" first-keystroke="ctrl shift n"/>
             <keyboard-shortcut keymap="Default for GNOME" first-keystroke="ctrl shift n"/>
             <keyboard-shortcut keymap="Default for KDE" first-keystroke="ctrl shift n"/>
             <keyboard-shortcut keymap="Default for XWin" first-keystroke="ctrl shift n"/>
-            <keyboard-shortcut keymap="Eclipse" first-keystroke="ctrl shift n"/>
-            <keyboard-shortcut keymap="Eclipse (Mac OS X)" first-keystroke="ctrl shift n"/>
             <keyboard-shortcut keymap="Emacs" first-keystroke="ctrl shift n"/>
             <keyboard-shortcut keymap="Mac OS X" first-keystroke="ctrl shift n"/>
             <keyboard-shortcut keymap="Mac OS X 10.5+" first-keystroke="ctrl shift n"/>
             <keyboard-shortcut keymap="macOS System Shortcuts" first-keystroke="ctrl shift j"/>
-            <keyboard-shortcut keymap="NetBeans 6.5" first-keystroke="ctrl shift n"/>
-            <keyboard-shortcut keymap="QtCreator (Mac OS X)" first-keystroke="ctrl shift n"/>
-            <keyboard-shortcut keymap="ReSharper OSX" first-keystroke="ctrl shift n"/>
             <keyboard-shortcut keymap="Sublime Text" first-keystroke="ctrl shift n"/>
             <keyboard-shortcut keymap="Sublime Text (Mac OS X)" first-keystroke="ctrl shift n"/>
-            <keyboard-shortcut keymap="Visual Assist OSX" first-keystroke="ctrl shift n"/>
-            <keyboard-shortcut keymap="Visual Studio" first-keystroke="ctrl shift n"/>
-            <keyboard-shortcut keymap="Visual Studio for Mac" first-keystroke="ctrl shift n"/>
-            <keyboard-shortcut keymap="Visual Studio OSX" first-keystroke="ctrl shift n"/>
-            <keyboard-shortcut keymap="VSCode OSX" first-keystroke="ctrl shift n"/>
-            <keyboard-shortcut keymap="Xcode" first-keystroke="ctrl shift n"/>
         </action>
     </actions>
 </idea-plugin>
