--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -3,6 +3,8 @@
     <name>Serial Number</name>
     <vendor email="1908105978@qq.com" url="https://github.com/Joker-Q4/serial_number">Joker</vendor>
 
+    <idea-version since-build="201"/>
+
     <description><![CDATA[
 
     Serial Number is a plugin that help you quickly generate serial numbers.<br/>
@@ -19,6 +21,10 @@
 
     <change-notes><![CDATA[
 
+        <h3>v1.0.9</h3>
+        <ul>
+            <li>Optimize version compatibility</li>
+        </ul>
         <h3>v1.0.8</h3>
         <ul>
             <li>Optimize version compatibility</li>
@@ -71,6 +77,8 @@
 
     <!-- please see https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html
          on how to target different products -->
+    <depends>com.intellij.database</depends>
+    <depends>com.intellij.modules.lang</depends>
     <depends>com.intellij.modules.platform</depends>
     <depends>com.intellij.modules.java</depends>
 
