--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,9 +1,4 @@
 <idea-plugin>
-    <id>com.joker.serial_number</id>
-    <name>Serial Number</name>
-    <vendor email="1908105978@qq.com" url="https://github.com/Joker-Q4/serial_number">Joker</vendor>
-
-    <idea-version since-build="201"/>
 
     <description><![CDATA[
 
@@ -21,6 +16,10 @@
 
     <change-notes><![CDATA[
 
+        <h3>v1.0.10</h3>
+        <ul>
+            <li>Optimize version compatibility</li>
+        </ul>
         <h3>v1.0.9</h3>
         <ul>
             <li>Optimize version compatibility</li>
@@ -77,15 +76,14 @@
 
     <!-- please see https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html
          on how to target different products -->
-    <depends>com.intellij.database</depends>
     <depends>com.intellij.modules.lang</depends>
     <depends>com.intellij.modules.platform</depends>
     <depends>com.intellij.modules.java</depends>
 
 
-    <extensions defaultExtensionNs="com.intellij">
-        <!-- Add your extensions here -->
-    </extensions>
+<!--    <extensions defaultExtensionNs="com.intellij">-->
+<!--        &lt;!&ndash; Add your extensions here &ndash;&gt;-->
+<!--    </extensions>-->
 
     <actions>
         <action id="GenerateSerialNumber" class="com.joker.plugin.action.GenerateSerialNumber" text="Serial Number" description="Generate serial number">
